# acquia-tap-mysql

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_mysql/: __init__.py  client.py  streams.py  tap.py
tests/: test_core.py
